Question encryption implemented

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-env
-app/questions
+app/build
 app/music
+app/questions
+dist
+env
 graphics
-*.pyc
-.png
+txt_files
+__pycache__
 *.json
+*.png
+*.pyo
+*.pyc
+*.spec
+*.exe
